playscript-js/demo/MyGrammarParser.js
// Generated from MyGrammar.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require('antlr4/index');
var MyGrammarListener = require('./MyGrammarListener').MyGrammarListener;
var MyGrammarVisitor = require('./MyGrammarVisitor').MyGrammarVisitor;

var grammarFileName = "MyGrammar.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'var'", "'.'", "'['", "']'", "'++'", "'--'", 
                     "'+'", "'-'", "'~'", "'!'", "'*'", "'/'", "'%'", "'<'", 
                     "'>'", "'<='", "'>='", "'=='", "'!='", "'&'", "'^'", 
                     "'|'", "'&&'", "'||'", "'?'", "':'", "'='", "'+='", 
                     "'-='", "'*='", "'/='", "'&='", "'|='", "'^='", "'>>='", 
                     "'>>>='", "'<<='", "'%='", "'('", "')'", "','", "'let'", 
                     "'const'", null, null, "'null'", "'void'", "'super'", 
                     "'function'", "'this'", "'instanceof'", null, null, 
                     "';'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, "Let", "Const", 
                      "IntegerLiteral", "BooleanLiteral", "NullLiteral", 
                      "VOID", "SUPER", "FUNCTION", "THIS", "INSTANCEOF", 
                      "IDENTIFIER", "StringLiteral", "SEMI", "WS" ];

var ruleNames =  [ "literal", "primitiveType", "expression", "primary", 
                   "functionCall", "expressionList", "typeType", "classOrInterfaceType", 
                   "functionType", "typeList", "typeTypeOrVoid" ];

function MyGrammarParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

MyGrammarParser.prototype = Object.create(antlr4.Parser.prototype);
MyGrammarParser.prototype.constructor = MyGrammarParser;

Object.defineProperty(MyGrammarParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

MyGrammarParser.EOF = antlr4.Token.EOF;
MyGrammarParser.T__0 = 1;
MyGrammarParser.T__1 = 2;
MyGrammarParser.T__2 = 3;
MyGrammarParser.T__3 = 4;
MyGrammarParser.T__4 = 5;
MyGrammarParser.T__5 = 6;
MyGrammarParser.T__6 = 7;
MyGrammarParser.T__7 = 8;
MyGrammarParser.T__8 = 9;
MyGrammarParser.T__9 = 10;
MyGrammarParser.T__10 = 11;
MyGrammarParser.T__11 = 12;
MyGrammarParser.T__12 = 13;
MyGrammarParser.T__13 = 14;
MyGrammarParser.T__14 = 15;
MyGrammarParser.T__15 = 16;
MyGrammarParser.T__16 = 17;
MyGrammarParser.T__17 = 18;
MyGrammarParser.T__18 = 19;
MyGrammarParser.T__19 = 20;
MyGrammarParser.T__20 = 21;
MyGrammarParser.T__21 = 22;
MyGrammarParser.T__22 = 23;
MyGrammarParser.T__23 = 24;
MyGrammarParser.T__24 = 25;
MyGrammarParser.T__25 = 26;
MyGrammarParser.T__26 = 27;
MyGrammarParser.T__27 = 28;
MyGrammarParser.T__28 = 29;
MyGrammarParser.T__29 = 30;
MyGrammarParser.T__30 = 31;
MyGrammarParser.T__31 = 32;
MyGrammarParser.T__32 = 33;
MyGrammarParser.T__33 = 34;
MyGrammarParser.T__34 = 35;
MyGrammarParser.T__35 = 36;
MyGrammarParser.T__36 = 37;
MyGrammarParser.T__37 = 38;
MyGrammarParser.T__38 = 39;
MyGrammarParser.T__39 = 40;
MyGrammarParser.T__40 = 41;
MyGrammarParser.Let = 42;
MyGrammarParser.Const = 43;
MyGrammarParser.IntegerLiteral = 44;
MyGrammarParser.BooleanLiteral = 45;
MyGrammarParser.NullLiteral = 46;
MyGrammarParser.VOID = 47;
MyGrammarParser.SUPER = 48;
MyGrammarParser.FUNCTION = 49;
MyGrammarParser.THIS = 50;
MyGrammarParser.INSTANCEOF = 51;
MyGrammarParser.IDENTIFIER = 52;
MyGrammarParser.StringLiteral = 53;
MyGrammarParser.SEMI = 54;
MyGrammarParser.WS = 55;

MyGrammarParser.RULE_literal = 0;
MyGrammarParser.RULE_primitiveType = 1;
MyGrammarParser.RULE_expression = 2;
MyGrammarParser.RULE_primary = 3;
MyGrammarParser.RULE_functionCall = 4;
MyGrammarParser.RULE_expressionList = 5;
MyGrammarParser.RULE_typeType = 6;
MyGrammarParser.RULE_classOrInterfaceType = 7;
MyGrammarParser.RULE_functionType = 8;
MyGrammarParser.RULE_typeList = 9;
MyGrammarParser.RULE_typeTypeOrVoid = 10;


function LiteralContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MyGrammarParser.RULE_literal;
    return this;
}

LiteralContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
LiteralContext.prototype.constructor = LiteralContext;

LiteralContext.prototype.IntegerLiteral = function() {
    return this.getToken(MyGrammarParser.IntegerLiteral, 0);
};

LiteralContext.prototype.BooleanLiteral = function() {
    return this.getToken(MyGrammarParser.BooleanLiteral, 0);
};

LiteralContext.prototype.StringLiteral = function() {
    return this.getToken(MyGrammarParser.StringLiteral, 0);
};

LiteralContext.prototype.NullLiteral = function() {
    return this.getToken(MyGrammarParser.NullLiteral, 0);
};

LiteralContext.prototype.enterRule = function(listener) {
    if(listener instanceof MyGrammarListener ) {
        listener.enterLiteral(this);
	}
};

LiteralContext.prototype.exitRule = function(listener) {
    if(listener instanceof MyGrammarListener ) {
        listener.exitLiteral(this);
	}
};

LiteralContext.prototype.accept = function(visitor) {
    if ( visitor instanceof MyGrammarVisitor ) {
        return visitor.visitLiteral(this);
    } else {
        return visitor.visitChildren(this);
    }
};




MyGrammarParser.LiteralContext = LiteralContext;

MyGrammarParser.prototype.literal = function() {

    var localctx = new LiteralContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, MyGrammarParser.RULE_literal);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 22;
        _la = this._input.LA(1);
        if(!(((((_la - 44)) & ~0x1f) == 0 && ((1 << (_la - 44)) & ((1 << (MyGrammarParser.IntegerLiteral - 44)) | (1 << (MyGrammarParser.BooleanLiteral - 44)) | (1 << (MyGrammarParser.NullLiteral - 44)) | (1 << (MyGrammarParser.StringLiteral - 44)))) !== 0))) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function PrimitiveTypeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MyGrammarParser.RULE_primitiveType;
    return this;
}

PrimitiveTypeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PrimitiveTypeContext.prototype.constructor = PrimitiveTypeContext;

PrimitiveTypeContext.prototype.Let = function() {
    return this.getToken(MyGrammarParser.Let, 0);
};

PrimitiveTypeContext.prototype.Const = function() {
    return this.getToken(MyGrammarParser.Const, 0);
};

PrimitiveTypeContext.prototype.enterRule = function(listener) {
    if(listener instanceof MyGrammarListener ) {
        listener.enterPrimitiveType(this);
	}
};

PrimitiveTypeContext.prototype.exitRule = function(listener) {
    if(listener instanceof MyGrammarListener ) {
        listener.exitPrimitiveType(this);
	}
};

PrimitiveTypeContext.prototype.accept = function(visitor) {
    if ( visitor instanceof MyGrammarVisitor ) {
        return visitor.visitPrimitiveType(this);
    } else {
        return visitor.visitChildren(this);
    }
};




MyGrammarParser.PrimitiveTypeContext = PrimitiveTypeContext;

MyGrammarParser.prototype.primitiveType = function() {

    var localctx = new PrimitiveTypeContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, MyGrammarParser.RULE_primitiveType);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 24;
        _la = this._input.LA(1);
        if(!(_la===MyGrammarParser.T__0 || _la===MyGrammarParser.Let || _la===MyGrammarParser.Const)) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ExpressionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MyGrammarParser.RULE_expression;
    this.prefix = null; // Token
    this.bop = null; // Token
    this.postfix = null; // Token
    return this;
}

ExpressionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExpressionContext.prototype.constructor = ExpressionContext;

ExpressionContext.prototype.primary = function() {
    return this.getTypedRuleContext(PrimaryContext,0);
};

ExpressionContext.prototype.functionCall = function() {
    return this.getTypedRuleContext(FunctionCallContext,0);
};

ExpressionContext.prototype.expression = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExpressionContext);
    } else {
        return this.getTypedRuleContext(ExpressionContext,i);
    }
};

ExpressionContext.prototype.SEMI = function() {
    return this.getToken(MyGrammarParser.SEMI, 0);
};

ExpressionContext.prototype.IDENTIFIER = function() {
    return this.getToken(MyGrammarParser.IDENTIFIER, 0);
};

ExpressionContext.prototype.typeType = function() {
    return this.getTypedRuleContext(TypeTypeContext,0);
};

ExpressionContext.prototype.INSTANCEOF = function() {
    return this.getToken(MyGrammarParser.INSTANCEOF, 0);
};

ExpressionContext.prototype.enterRule = function(listener) {
    if(listener instanceof MyGrammarListener ) {
        listener.enterExpression(this);
	}
};

ExpressionContext.prototype.exitRule = function(listener) {
    if(listener instanceof MyGrammarListener ) {
        listener.exitExpression(this);
	}
};

ExpressionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof MyGrammarVisitor ) {
        return visitor.visitExpression(this);
    } else {
        return visitor.visitChildren(this);
    }
};



MyGrammarParser.prototype.expression = function(_p) {
	if(_p===undefined) {
	    _p = 0;
	}
    var _parentctx = this._ctx;
    var _parentState = this.state;
    var localctx = new ExpressionContext(this, this._ctx, _parentState);
    var _prevctx = localctx;
    var _startState = 4;
    this.enterRecursionRule(localctx, 4, MyGrammarParser.RULE_expression, _p);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 34;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
        switch(la_) {
        case 1:
            this.state = 27;
            this.primary();
            break;

        case 2:
            this.state = 28;
            this.functionCall();
            break;

        case 3:
            this.state = 29;
            localctx.prefix = this._input.LT(1);
            _la = this._input.LA(1);
            if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << MyGrammarParser.T__4) | (1 << MyGrammarParser.T__5) | (1 << MyGrammarParser.T__6) | (1 << MyGrammarParser.T__7))) !== 0))) {
                localctx.prefix = this._errHandler.recoverInline(this);
            }
            else {
            	this._errHandler.reportMatch(this);
                this.consume();
            }
            this.state = 30;
            this.expression(16);
            break;

        case 4:
            this.state = 31;
            localctx.prefix = this._input.LT(1);
            _la = this._input.LA(1);
            if(!(_la===MyGrammarParser.T__8 || _la===MyGrammarParser.T__9)) {
                localctx.prefix = this._errHandler.recoverInline(this);
            }
            else {
            	this._errHandler.reportMatch(this);
                this.consume();
            }
            this.state = 32;
            this.expression(15);
            break;

        case 5:
            this.state = 33;
            this.match(MyGrammarParser.SEMI);
            break;

        }
        this._ctx.stop = this._input.LT(-1);
        this.state = 101;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,4,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                if(this._parseListeners!==null) {
                    this.triggerExitRuleEvent();
                }
                _prevctx = localctx;
                this.state = 99;
                this._errHandler.sync(this);
                var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
                switch(la_) {
                case 1:
                    localctx = new ExpressionContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, MyGrammarParser.RULE_expression);
                    this.state = 36;
                    if (!( this.precpred(this._ctx, 14))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 14)");
                    }
                    this.state = 37;
                    localctx.bop = this._input.LT(1);
                    _la = this._input.LA(1);
                    if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << MyGrammarParser.T__10) | (1 << MyGrammarParser.T__11) | (1 << MyGrammarParser.T__12))) !== 0))) {
                        localctx.bop = this._errHandler.recoverInline(this);
                    }
                    else {
                    	this._errHandler.reportMatch(this);
                        this.consume();
                    }
                    this.state = 38;
                    this.expression(15);
                    break;

                case 2:
                    localctx = new ExpressionContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, MyGrammarParser.RULE_expression);
                    this.state = 39;
                    if (!( this.precpred(this._ctx, 13))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 13)");
                    }
                    this.state = 40;
                    localctx.bop = this._input.LT(1);
                    _la = this._input.LA(1);
                    if(!(_la===MyGrammarParser.T__6 || _la===MyGrammarParser.T__7)) {
                        localctx.bop = this._errHandler.recoverInline(this);
                    }
                    else {
                    	this._errHandler.reportMatch(this);
                        this.consume();
                    }
                    this.state = 41;
                    this.expression(14);
                    break;

                case 3:
                    localctx = new ExpressionContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, MyGrammarParser.RULE_expression);
                    this.state = 42;
                    if (!( this.precpred(this._ctx, 12))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 12)");
                    }
                    this.state = 50;
                    this._errHandler.sync(this);
                    var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
                    switch(la_) {
                    case 1:
                        this.state = 43;
                        this.match(MyGrammarParser.T__13);
                        this.state = 44;
                        this.match(MyGrammarParser.T__13);
                        break;

                    case 2:
                        this.state = 45;
                        this.match(MyGrammarParser.T__14);
                        this.state = 46;
                        this.match(MyGrammarParser.T__14);
                        this.state = 47;
                        this.match(MyGrammarParser.T__14);
                        break;

                    case 3:
                        this.state = 48;
                        this.match(MyGrammarParser.T__14);
                        this.state = 49;
                        this.match(MyGrammarParser.T__14);
                        break;

                    }
                    this.state = 52;
                    this.expression(13);
                    break;

                case 4:
                    localctx = new ExpressionContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, MyGrammarParser.RULE_expression);
                    this.state = 53;
                    if (!( this.precpred(this._ctx, 11))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 11)");
                    }
                    this.state = 54;
                    localctx.bop = this._input.LT(1);
                    _la = this._input.LA(1);
                    if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << MyGrammarParser.T__13) | (1 << MyGrammarParser.T__14) | (1 << MyGrammarParser.T__15) | (1 << MyGrammarParser.T__16))) !== 0))) {
                        localctx.bop = this._errHandler.recoverInline(this);
                    }
                    else {
                    	this._errHandler.reportMatch(this);
                        this.consume();
                    }
                    this.state = 55;
                    this.expression(12);
                    break;

                case 5:
                    localctx = new ExpressionContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, MyGrammarParser.RULE_expression);
                    this.state = 56;
                    if (!( this.precpred(this._ctx, 9))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 9)");
                    }
                    this.state = 57;
                    localctx.bop = this._input.LT(1);
                    _la = this._input.LA(1);
                    if(!(_la===MyGrammarParser.T__17 || _la===MyGrammarParser.T__18)) {
                        localctx.bop = this._errHandler.recoverInline(this);
                    }
                    else {
                    	this._errHandler.reportMatch(this);
                        this.consume();
                    }
                    this.state = 58;
                    this.expression(10);
                    break;

                case 6:
                    localctx = new ExpressionContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, MyGrammarParser.RULE_expression);
                    this.state = 59;
                    if (!( this.precpred(this._ctx, 8))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 8)");
                    }
                    this.state = 60;
                    localctx.bop = this.match(MyGrammarParser.T__19);
                    this.state = 61;
                    this.expression(9);
                    break;

                case 7:
                    localctx = new ExpressionContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, MyGrammarParser.RULE_expression);
                    this.state = 62;
                    if (!( this.precpred(this._ctx, 7))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 7)");
                    }
                    this.state = 63;
                    localctx.bop = this.match(MyGrammarParser.T__20);
                    this.state = 64;
                    this.expression(8);
                    break;

                case 8:
                    localctx = new ExpressionContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, MyGrammarParser.RULE_expression);
                    this.state = 65;
                    if (!( this.precpred(this._ctx, 6))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 6)");
                    }
                    this.state = 66;
                    localctx.bop = this.match(MyGrammarParser.T__21);
                    this.state = 67;
                    this.expression(7);
                    break;

                case 9:
                    localctx = new ExpressionContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, MyGrammarParser.RULE_expression);
                    this.state = 68;
                    if (!( this.precpred(this._ctx, 5))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 5)");
                    }
                    this.state = 69;
                    localctx.bop = this.match(MyGrammarParser.T__22);
                    this.state = 70;
                    this.expression(6);
                    break;

                case 10:
                    localctx = new ExpressionContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, MyGrammarParser.RULE_expression);
                    this.state = 71;
                    if (!( this.precpred(this._ctx, 4))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 4)");
                    }
                    this.state = 72;
                    localctx.bop = this.match(MyGrammarParser.T__23);
                    this.state = 73;
                    this.expression(5);
                    break;

                case 11:
                    localctx = new ExpressionContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, MyGrammarParser.RULE_expression);
                    this.state = 74;
                    if (!( this.precpred(this._ctx, 3))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 3)");
                    }
                    this.state = 75;
                    localctx.bop = this.match(MyGrammarParser.T__24);
                    this.state = 76;
                    this.expression(0);
                    this.state = 77;
                    this.match(MyGrammarParser.T__25);
                    this.state = 78;
                    this.expression(4);
                    break;

                case 12:
                    localctx = new ExpressionContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, MyGrammarParser.RULE_expression);
                    this.state = 80;
                    if (!( this.precpred(this._ctx, 2))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
                    }
                    this.state = 81;
                    localctx.bop = this._input.LT(1);
                    _la = this._input.LA(1);
                    if(!(((((_la - 27)) & ~0x1f) == 0 && ((1 << (_la - 27)) & ((1 << (MyGrammarParser.T__26 - 27)) | (1 << (MyGrammarParser.T__27 - 27)) | (1 << (MyGrammarParser.T__28 - 27)) | (1 << (MyGrammarParser.T__29 - 27)) | (1 << (MyGrammarParser.T__30 - 27)) | (1 << (MyGrammarParser.T__31 - 27)) | (1 << (MyGrammarParser.T__32 - 27)) | (1 << (MyGrammarParser.T__33 - 27)) | (1 << (MyGrammarParser.T__34 - 27)) | (1 << (MyGrammarParser.T__35 - 27)) | (1 << (MyGrammarParser.T__36 - 27)) | (1 << (MyGrammarParser.T__37 - 27)))) !== 0))) {
                        localctx.bop = this._errHandler.recoverInline(this);
                    }
                    else {
                    	this._errHandler.reportMatch(this);
                        this.consume();
                    }
                    this.state = 82;
                    this.expression(2);
                    break;

                case 13:
                    localctx = new ExpressionContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, MyGrammarParser.RULE_expression);
                    this.state = 83;
                    if (!( this.precpred(this._ctx, 20))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 20)");
                    }
                    this.state = 84;
                    localctx.bop = this.match(MyGrammarParser.T__1);
                    this.state = 87;
                    this._errHandler.sync(this);
                    var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
                    switch(la_) {
                    case 1:
                        this.state = 85;
                        this.match(MyGrammarParser.IDENTIFIER);
                        break;

                    case 2:
                        this.state = 86;
                        this.functionCall();
                        break;

                    }
                    break;

                case 14:
                    localctx = new ExpressionContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, MyGrammarParser.RULE_expression);
                    this.state = 89;
                    if (!( this.precpred(this._ctx, 19))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 19)");
                    }
                    this.state = 90;
                    this.match(MyGrammarParser.T__2);
                    this.state = 91;
                    this.expression(0);
                    this.state = 92;
                    this.match(MyGrammarParser.T__3);
                    break;

                case 15:
                    localctx = new ExpressionContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, MyGrammarParser.RULE_expression);
                    this.state = 94;
                    if (!( this.precpred(this._ctx, 17))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 17)");
                    }
                    this.state = 95;
                    localctx.postfix = this._input.LT(1);
                    _la = this._input.LA(1);
                    if(!(_la===MyGrammarParser.T__4 || _la===MyGrammarParser.T__5)) {
                        localctx.postfix = this._errHandler.recoverInline(this);
                    }
                    else {
                    	this._errHandler.reportMatch(this);
                        this.consume();
                    }
                    break;

                case 16:
                    localctx = new ExpressionContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, MyGrammarParser.RULE_expression);
                    this.state = 96;
                    if (!( this.precpred(this._ctx, 10))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 10)");
                    }
                    this.state = 97;
                    localctx.bop = this.match(MyGrammarParser.INSTANCEOF);
                    this.state = 98;
                    this.typeType();
                    break;

                } 
            }
            this.state = 103;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,4,this._ctx);
        }

    } catch( error) {
        if(error instanceof antlr4.error.RecognitionException) {
	        localctx.exception = error;
	        this._errHandler.reportError(this, error);
	        this._errHandler.recover(this, error);
	    } else {
	    	throw error;
	    }
    } finally {
        this.unrollRecursionContexts(_parentctx)
    }
    return localctx;
};


function PrimaryContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MyGrammarParser.RULE_primary;
    this._literal = null; // LiteralContext
    return this;
}

PrimaryContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PrimaryContext.prototype.constructor = PrimaryContext;

PrimaryContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

PrimaryContext.prototype.THIS = function() {
    return this.getToken(MyGrammarParser.THIS, 0);
};
